--- a/frontend/src/components/Header/style.css
+++ b/frontend/src/components/Header/style.css
@@ -7,6 +7,11 @@ header {
   width: 100vw;
 }
 
+header i {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
 .logo {
   color: #FFFFFF;
   text-decoration: none;
